--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react": "^16.13.1",
     "react-chatbot-kit": "^1.0.6",
     "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
