--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "react-google-charts": "^3.0.15",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
-    "react-with-firebase-auth": "^1.3.2"
+    "react-scripts": "3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
